moved the txt file

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,24 +21,14 @@ jobs:
       with:
         python-version: 3.x
 
-    - name: Install Chrome browser
-      run: |
-        sudo apt-get update
-        sudo apt-get install google-chrome-stable
-
-    - name: Install ChromeDriver
-      run: |
-        LATEST_CHROMEDRIVER_VERSION=$(curl -s "https://chromedriver.storage.googleapis.com/LATEST_RELEASE")
-        wget -q --continue -P /tmp "https://chromedriver.storage.googleapis.com/$LATEST_CHROMEDRIVER_VERSION/chromedriver_linux64.zip"
-        sudo unzip -o /tmp/chromedriver_linux64.zip -d /usr/local/bin
-
     - name: Install dependencies
       run: |
         python -m venv venv
         source venv/bin/activate
         pip install -r requirements.txt
+        pip install pytest  # Install pytest
 
     - name: Run tests
       run: |
         source venv/bin/activate
-        python -m unittest discover -s ./day1 -p 'test_day5BrowserNavigation.py'
+        pytest ./day1  # Run pytest on the day1 directory
