--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,16 +19,14 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: 3.x
+        python-version: 3.9
 
     - name: Install dependencies
       run: |
         python -m venv venv
-        source venv/bin/activate
-        pip install -r requirements.txt
-        pip install pytest  # Install pytest
+        venv/bin/pip install -r requirements.txt
+        venv/bin/pip install pytest  # Install pytest
 
     - name: Run tests
       run: |
-        source venv/bin/activate
-        pytest ./day1  # Run pytest on the day1 directory
+        venv/bin/pytest ./day1  # Run pytest on the day1 directory
