moved the txt file

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,9 +24,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m venv venv
-        venv/bin/pip install -r requirements.txt
+        venv/bin/pip install -r pythonProject/requirements.txt
         venv/bin/pip install pytest  # Install pytest
 
     - name: Run tests
       run: |
-        venv/bin/pytest ./day1  # Run pytest on the day1 directory
+        venv/bin/pytest pythonProject/day1  # Adjust the path as needed
