--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,9 +28,11 @@ jobs:
 
     - name: Install ChromeDriver
       run: |
-        LATEST_CHROMEDRIVER_VERSION=$(curl -s "https://chromedriver.storage.googleapis.com/LATEST_RELEASE")
-        wget -q --continue -P /tmp "https://chromedriver.storage.googleapis.com/$LATEST_CHROMEDRIVER_VERSION/chromedriver_linux64.zip"
-        sudo unzip -o /tmp/chromedriver_linux64.zip -d /usr/local/bin
+        LATEST_CHROMEDRIVER_VERSION=$(curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE)
+    	wget https://chromedriver.storage.googleapis.com/$LATEST_CHROMEDRIVER_VERSION/chromedriver_linux64.zip
+	unzip chromedriver_linux64.zip
+	sudo mv chromedriver /usr/local/bin/
+    	sudo chmod +x /usr/local/bin/chromedriver
 
     - name: Install dependencies
       run: |
